--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "knip": "^5.1.1",
     "vite": "^5.1.6"
+  },
+  "dependencies": {
+    "typescript": "^5.4.2"
   }
 }
